<resources>
    <string name="app_name">Flinnt</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_courses">My Courses</string>
    <string name="join_course">Join a Course</string>
    <string name="course_invites">Course Invites</string>
    <string name="user_requests">User Requests</string>
    <string name="join_community">Join A Community</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notifications">Notifications</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="invite_user">Invite User</string>
    <string name="users">Users</string>
    <string name="mute">Mute</string>
    <string name="give_ratting">Give Rating</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="course_info">Course Info</string>
    <string name="filter_by">Filter by Post</string>
    <string name="alert">Alert</string>
    <string name="message">Message</string>
    <string name="album">Album</string>
    <string name="quiz">Quiz</string>
    <string name="post">Post</string>
    <string name="course">Course</string>
    <string name="poll">Poll</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_mobile_hint">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="submit_keyboard">SUBMIT</string>
    <string name="login">Login</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="forgot_password_que">Forgot Password?</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="login_keyboard">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_username_reset_password">Enter your username below to reset your password</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="verify">Verify</string>
    <string name="verify_keyboard">VERIFY</string>
    <string name="already_verified">I\'ve already verified</string>
    <string name="sent_verification_code_on_mobile">	<![CDATA[
	    We have sent a verification code on mobile no: <b>"xxxxxxxxxx"</b>.
	    ]]>
    </string>
    <string name="enter_code_and_verify">Enter the code below and click to verify.</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="sms_delivery_take_time">Please note that SMS delivery can take a minute or more.</string>
    <string name="sms_not_received">Did not receive SMS? Try Again</string>
    <string name="call_for_help">For help call : 0-79-4014-9800</string>
    <string name="verify_email">Verify Email</string>
    <string name="sent_verification_link_on_email">	<![CDATA[
	    We have sent a verification link on email: <b>"xxxxxxxxxx"</b>.
	    ]]>
    </string>
    <string name="click_link_and_verify">Click on link to verify your email.</string>
    <string name="email_not_received">Did not receive Email? Try Again</string>
    <string name="verify_mobile_and_email">Verify Mobile And Email</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="terms_and_condition_verify">By verifying account, you agree to our Terms and Conditions.</string>
    <string name="terms_and_condition_signup">By clicking Submit, you agree to our Terms and Conditions.</string>
    <string name="course_code">Course Code</string>
    <string name="join_course_title">Enter a 6-digit course code you have obtained from your institute.</string>
    <string name="tags">Tags</string>
    <string name="like">Like</string>
    <string name="bookmark">Bookmark</string>
    <string name="comments">Comments</string>
    <string name="post_comments">Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="reply">Reply</string>
    <string name="replies">Replies</string>
    <string name="add_reply">Add reply</string>
    <string name="select_answer">Select Answer</string>
    <string name="add_post">Add Post</string>
    <string name="choose_template">Choose a Template</string>
    <string name="post_details">Post Details</string>
    <string name="attach_file">Attach File</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_tag_comma">Add Tags (Separate with comma)</string>
    <string name="publish">Publish</string>
    <string name="edit_post">Edit Post</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="add_alert">Add Alert</string>
    <string name="alert_details">Alert Details</string>
    <string name="alert_description">Alert Description</string>
    <string name="add_course">Add Course</string>
    <string name="course_details">Course Details</string>
    <string name="course_title">Course Title</string>
    <string name="course_image">Course Image</string>
    <string name="add_banner">Edit Banner</string>
    <string name="banner_image">Banner Image</string>
    <string name="banner_details">Banner Details</string>
    <string name="add_album">Add Album</string>
    <string name="album_details">Album Details</string>
    <string name="album_description">Album Description</string>
    <string name="add_message">Add Message</string>
    <string name="message_details">Message Details</string>
    <string name="message_description">Message Description</string>
    <string name="select_users">Select Users</string>
    <string name="message_sent">Message has been sent</string>
    <string name="message_updated">Message has been updated</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="que_details">Question Details</string>
    <string name="write_question">Write your question here</string>
    <string name="write_options">Write Options</string>
    <string name="select_corr_ans_msg">Select correct answer</string>
    <string name="view_profile">View Profile</string>
    <string name="update_birthday">Update your birthdate</string>
    <string name="gender_prompt">Select</string>
    <string name="select_birthday">Select your birthdate</string>
    <string-array name="gender_arrays">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="select_date_arrays">
        <item>Select Date</item>
    </string-array>
    <string-array name="select_time_arrays">
        <item>Select Time</item>
    </string-array>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="repost">Repost</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="required_all_field">All fields are required.</string>
    <string name="current_pass_wrong">Enter correct current password.</string>
    <string name="validate_pass">Use 6 character or more for password</string>
    <string name="pass_max_number">Password must be 15 or less character.</string>
    <string name="confirmpass_not_match">Password and confirm password must be same.</string>
    <string name="validate_email_mobile">Add valid email or mobile number</string>
    <string name="validate_mobile_number">Add valid mobile number</string>
    <string name="validate_email">Add valid email</string>
    <string name="invalid_varification_code">Invalid verification code</string>
    <string name="course_code_invalide">Add correct code</string>
    <string name="course_request_invalide">You must add note</string>
    <string name="no_internet_conn_title_dialog">No Internet Connection</string>
    <string name="no_internet_conn_message_dialog">Internet is not enabled. Do you want to go to settings menu?</string>
    <string name="account_not_verified">Your account is not verified.</string>
    <string name="account_verified">Your account has been verified.</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="link">Link</string>
    <string name="pdf">PDF</string>
    <string name="action_search">Search</string>
    <string name="action_options">Options</string>
    <string name="teacher">Teacher</string>
    <string name="teachers">Teachers</string>
    <string name="select_all">Select All</string>
    <string name="todo">TODO</string>
    <string name="remove_from_course">Remove from Course</string>
    <string name="disallow_messsage">Disallow messsage</string>
    <string name="allow_message">Allow message</string>
    <string name="disallow_comment">Disallow comment</string>
    <string name="remove_selection">Remove from Selection</string>
    <string name="students">Students</string>
    <string name="with_selected_users">With Selected Users</string>
    <string name="comment_reply">Mute all Comment/Reply</string>
    <string name="sound">Mute all Sounds</string>
    <string name="auto_download">Autodownload media</string>
    <string name="course_comment_reply">Comment / Reply</string>
    <string name="course_sound">Sound</string>
    <string name="course_mute_setting_message">No longer available. Set custom notification by tapping on top left menu and then tap on settings.</string>
    <string name="close">Close</string>
    <string name="close_txt">CLOSE</string>
    <string name="allow_comment">Allow comment</string>
    <string name="email_mobile">Email/Mobile</string>
    <string name="learner">Learner</string>
    <string name="learners">Learners</string>
    <string name="allow_users">Allow users to comment</string>
    <string name="display_teacher_name">Display teacher name</string>
    <string name="post_comment">Display comment without approval</string>
    <string name="subscription_days">Maximum subscription days for learner</string>
    <string name="add_course_settings">Allow learner to teacher message</string>
    <string name="allow_repost">Allow re-post</string>
    <string name="can_delete">Maximum no. of post a teacher can delete in a day</string>
    <string name="allow_teacher_message">Allow teacher to teacher message</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="record">Record</string>
    <string name="success_record">Recorded Successfully</string>
    <string name="start_record">Click on Record to start recording.</string>
    <string name="stop_button">Stop</string>
    <string name="recording">Recording…</string>
    <string name="playing">Playing…</string>
    <string name="stopped">Stopped</string>
    <string name="send_menu">Send</string>
    <string name="play_menu">Play</string>
    <string name="image">Image</string>
    <string name="apply_promocode_text">Apply Promocode</string>
    <string name="enter_code_hint">Enter Your Code</string>
    <string name="redeem_text">Redeem</string>
    <string name="redeem_keyboard">REDEEM</string>
    <string name="invalid_msg">The Promocode that you entered is invalid</string>
    <string name="selected_correct_answer">\t\tYou have selected correct answer</string>
    <string name="selected_incorrect_answer">\t\tYou have selected wrong answer</string>
    <string name="actual_correct_answer">\t\tActual correct answer</string>
    <string name="got_it">GOT IT</string>
</resources>