<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/attach_bottom_album"
        android:icon="@drawable/ic_new_attachment_image"
        android:title="@string/image"/>
    <item
        android:id="@+id/attach_bottom_photo"
        android:icon="@drawable/ic_new_attachment_photo"
        android:title="@string/photo"/>
    <item
        android:id="@+id/attach_bottom_video"
        android:icon="@drawable/ic_new_attachment_video"
        android:title="@string/video"/>
    <item
        android:id="@+id/attach_bottom_audio"
        android:icon="@drawable/ic_new_attachment_audio"
        android:title="@string/audio"/>
    <item
        android:id="@+id/attach_bottom_link"
        android:icon="@drawable/ic_new_attachment_link"
        android:title="@string/link"/>
    <item
        android:id="@+id/attach_bottom_pdf"
        android:icon="@drawable/ic_new_attachment_pdf"
        android:title="@string/pdf"/>

</menu>