<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
         
        <item
            android:id="@+id/my_courses_drawer"
            android:icon="@drawable/ic_drawer_my_courses"
            android:title="@string/my_courses" />
        <item
            android:id="@+id/join_course_drawer"
            android:icon="@drawable/ic_drawer_join_course"
            android:title="@string/join_course" />
        <item
            android:id="@+id/course_invites_drawer"
            android:icon="@drawable/ic_drawer_course_invites"
            android:title="@string/course_invites" />
        <item
            android:id="@+id/join_community_drawer"
            android:icon="@drawable/ic_drawer_join_community"
            android:title="@string/join_community" />
        <item
            android:id="@+id/bookmarks_drawer"
            android:icon="@drawable/ic_drawer_bookmarks"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/alerts_drawer"
            android:icon="@drawable/ic_drawer_notification"
            android:title="@string/alerts" />
        <item
            android:id="@+id/settings_drawer"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about_us_drawer"
            android:icon="@drawable/ic_drawer_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/help_drawer"
            android:icon="@drawable/ic_drawer_help"
            android:title="@string/help" />
        <item
            android:id="@+id/faq_drawer"
            android:icon="@drawable/ic_drawer_faq"
            android:title="@string/faq" />
        
		<item
            android:id="@+id/logout_drawer"
            android:icon="@drawable/ic_drawer_logout"
            android:title="@string/logout" />
        
    </group> 

    <!-- <item android:title="Sub items">
        <menu>
            <item
                android:icon="@drawable/ic_menu_emoticons"
                android:title="Sub item 1" />
            <item
                android:icon="@drawable/ic_menu_emoticons"
                android:title="Sub item 2" />
        </menu>
    </item> -->

</menu>
