<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/course_details_menu_filter_by"
        android:title="@string/filter_by"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_details_menu_invite_users"
        android:title="@string/invite_user"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_details_menu_users"
        android:title="@string/users"
        app:showAsAction="never"/>
    <!--<item
        android:id="@+id/course_details_menu_course_info"
        android:title="@string/course_info"
        app:showAsAction="never"/>-->
    <item
        android:id="@+id/course_details_menu_mute"
        android:title="@string/mute"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_details_menu_give_rating"
        android:title="@string/give_ratting"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_card_menu_course_info"
        android:title="@string/course_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_details_menu_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>