<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/course_card_menu_invite_users"
        android:orderInCategory="100"
        android:title="@string/invite_user"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_card_menu_users"
        android:orderInCategory="100"
        android:title="@string/users"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_card_menu_mute"
        android:orderInCategory="100"
        android:title="@string/mute"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_card_menu_give_ratting"
        android:orderInCategory="100"
        android:title="@string/give_ratting"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_card_menu_course_info"
        android:orderInCategory="100"
        android:title="@string/course_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/course_card_menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <!--<item
        android:id="@+id/course_card_menu_details"
        android:orderInCategory="100"
        android:title="@string/course_details"
        app:showAsAction="never"/>-->

</menu>